--- a/microservice-arch/gamehub-microarch/TwentyFortyEight/src/App.css
+++ b/microservice-arch/gamehub-microarch/TwentyFortyEight/src/App.css
@@ -5,6 +5,11 @@
   text-align: center;
   background-color: #121212;
   color: rgba(255, 255, 255, 0.87);
+  overflow: hidden;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Responsive adjustments for mobile */
